--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Artes</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">teste</div>
+    <Mensagem />
+    
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
